moves pager row down to prevent overlap with search dropdown

--- a/app/assets/stylesheets/_search_results.css.scss
+++ b/app/assets/stylesheets/_search_results.css.scss
@@ -163,6 +163,7 @@ h5.result-count {
 
 
 .pager {
+  margin-top: 55px;
   li.centered {
     display: inline-block;
     width: 50%;
